# datacrumbs

./: CMakeLists.txt  README.md  main.py  profile.c  pyproject.toml  requirements.txt  run_probe.sh
datacrumbs/: main.py
datacrumbs/common/: constants.py  data_structure.py  enumerations.py  status.py  utils.py
datacrumbs/configs/: configuration_manager.py
datacrumbs/dfbcc/: app_connector.py  dfbcc.py  io_probes.py  probes.py  user_probes.py
datacrumbs/writer/: perfetto.py
tests/: test.cpp
tests/scripts/: read.sh
